--- a/example/index.html
+++ b/example/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Nanobar</title>
-  <link rel="stylesheet" href="build/build.css">
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1,width=device-width, height=device-height"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <script src="build/build.js"></script>
   <style>
     .container {
       text-align: center;
@@ -66,25 +64,6 @@
       <p><a href="https://github.com/chemzqm/nanobar">View Documentation</a></p>
     </div>
   </div>
-  <script>
-    var Nanobar = require('nanobar');
-    var nanobar = new Nanobar();
-    nanobar.update(0.1);
-    (function() {
-      var buttons = document.getElementsByTagName('button');
-      for (var i = 0; i < buttons.length; i++) {
-        (function(button) {
-          button.onclick = function() {
-            var percent = button.getAttribute('data-percent');
-            if (percent) {
-              nanobar.update(percent);
-            } else {
-              nanobar.infinite();
-            }
-          };
-        })(buttons[i]);
-      }
-    })();
-  </script>
+  <script src="./bundle.js"></script>
 </body>
 </html>
